# cs2_dump

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cs2_dumper.sln  cs2_dumper.vcxproj  main.cpp  schema_dump.hpp  schema_export.hpp  schema_stubs.hpp  schemas.hpp
Dump/: component_graph.json
Dump/convars/: convars.hpp  convars.json
Dump/meta/: build_diff.json  build_timeline.json  coverage_report.json  fragile_patterns.json  module_confidence.json  offset_stability.json  output_quality.json  pattern_autofix_suggestions.json  phase_timings.json  regression_tests.json  risk_report.json  schema_semantic_validation.json  semantic_validation.json  validation_report.json
Dump/output/buttons/: buttons.cs  buttons.hpp  buttons.json  buttons.rs
Dump/output/integration/: offsets_safe.json  offsets_verified.json  summary.json
Dump/output/interfaces/: interfaces.cs  interfaces.hpp  interfaces.json  interfaces.rs
Dump/output/meta/: info.json
Dump/output/netvars/: hotlist.hpp  hotlist.json
Dump/output/offsets/: client_dll.cs  client_dll.hpp  client_dll.json  client_dll.rs  offsets.cs  (+23 more)
Dump/rtti/: classes.hpp  classes.json
Dump/schemas/: animationsystem_dll_dll.hpp  animationsystem_dll_dll.json  animationsystem_dll_structs.hpp  client_dll_dll.hpp  client_dll_dll.json  client_dll_structs.hpp  engine2_dll_dll.hpp  engine2_dll_dll.json  engine2_dll_structs.hpp  enums.hpp  particles_dll_dll.hpp  particles_dll_dll.json  particles_dll_structs.hpp  pulse_system_dll_dll.hpp  pulse_system_dll_dll.json  pulse_system_dll_structs.hpp  server_dll_dll.hpp  server_dll_dll.json  server_dll_structs.hpp  worldrenderer_dll_dll.hpp  worldrenderer_dll_dll.json  worldrenderer_dll_structs.hpp
Dump/sdk/: cs2_sdk.hpp  sdk_forward.hpp  sdk_offsets.hpp  sdk_types.hpp
Dump/vtables/: vtables.hpp  vtables.json
include/: buttons_dump.hpp  common.hpp  convar_dump.hpp  dump_data.hpp  exports_dump.hpp  interfaces_dump.hpp  logger.hpp  memory.hpp  output_dump.hpp  pattern_scanner.hpp  patterns.hpp  patterns_dump.hpp  pipeline_compat.hpp  rtti_dump.hpp  schema_tools.hpp  vtable_dump.hpp
include/core/: dump_config.hpp  dump_context.hpp  dump_paths.hpp  legacy_api.hpp  pipeline.hpp
include/utils/: json_writer.hpp
scripts/: clean.ps1
src/: legacy_globals.cpp
src/core/: legacy_api.cpp  pipeline.cpp
src/utils/: json_writer.cpp
(+26 files in other folders)
